--- a/Gui/车牌识别调试窗口.ui
+++ b/Gui/车牌识别调试窗口.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>360</width>
-    <height>203</height>
+    <height>215</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>车牌识别系统</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="Photo_widget" native="true">
+   <widget class="QWidget" name="photo_widget" native="true">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -36,7 +36,7 @@
       <string>加载车牌图片</string>
      </property>
     </widget>
-    <widget class="QLabel" name="Photo">
+    <widget class="QLabel" name="photo">
      <property name="geometry">
       <rect>
        <x>40</x>
@@ -56,7 +56,7 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="Char_widget" native="true">
+   <widget class="QWidget" name="char_widget" native="true">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -89,7 +89,7 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLabel" name="Char0">
+       <widget class="QLabel" name="char0">
         <property name="text">
          <string/>
         </property>
@@ -99,7 +99,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Char1">
+       <widget class="QLabel" name="char1">
         <property name="text">
          <string/>
         </property>
@@ -109,7 +109,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Char2">
+       <widget class="QLabel" name="char2">
         <property name="text">
          <string/>
         </property>
@@ -119,7 +119,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Char3">
+       <widget class="QLabel" name="char3">
         <property name="text">
          <string/>
         </property>
@@ -129,7 +129,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Char4">
+       <widget class="QLabel" name="char4">
         <property name="text">
          <string/>
         </property>
@@ -139,7 +139,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Char5">
+       <widget class="QLabel" name="char5">
         <property name="text">
          <string/>
         </property>
@@ -149,7 +149,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="Char6">
+       <widget class="QLabel" name="char6">
         <property name="text">
          <string/>
         </property>
@@ -161,7 +161,7 @@
      </layout>
     </widget>
    </widget>
-   <widget class="QWidget" name="Result_widget" native="true">
+   <widget class="QWidget" name="result_widget" native="true">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -182,6 +182,9 @@
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QLabel" name="label_text2">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="text">
          <string>识别结果：</string>
         </property>
