--- a/Gui/车牌识别调试窗口V2_0.ui
+++ b/Gui/车牌识别调试窗口V2_0.ui
@@ -192,7 +192,7 @@
     <property name="title">
      <string>字符识别结果</string>
     </property>
-    <widget class="QTextEdit" name="result">
+    <widget class="QLineEdit" name="result">
      <property name="geometry">
       <rect>
        <x>60</x>
@@ -200,6 +200,14 @@
        <width>141</width>
        <height>41</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </widget>
